[package]
name = "envin"
license = "MIT"
edition = "2021"
version = "0.0.4"
repository = "https://github.com/cainthebest/envin"
description = "Displays information about your Rust environment"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[dependencies]
toml = "0.8.19"
which = "7.0.0"
sysinfo = "0.32.0"
rustc_version = "0.4.1"
clap = { version = "4.5.28", features = ["derive", "cargo"] }
